# Qwen2.openvino

./: README.md  README_zh.md  chat.py  chat_genai.py  convert.py  generate.py  requirements.txt
all-in-one/: config.yaml  run.py
ov-ccg-test/: testQwen2_7B_stream_edited.py
qwen_cpp/: CMakeLists.txt  qwen.cpp
